# composite-diffuse-layer-calc

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/cdl/: __init__.py  calculations.py  database.py  models.py  physics.py  solvers.py  utils.py  visualize.py
tests/: test_physics.py  test_physics_extended.py
